--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation">
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:enabled="true" android:name=".MyService" />
     </application>
 
     <receiver android:name="com.ondro.randomizer.AccelerometerFragment">
@@ -35,3 +34,5 @@
         </intent-filter>
     </receiver>
 </manifest>
+    <!--android:screenOrientation="portrait"
+               android:configChanges="keyboardHidden|orientation">-->
