--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <service android:enabled="true" android:name=".MyService" />
+        <receiver android:name=".AlarmReceiver"></receiver>
     </application>
 
     <receiver android:name="com.ondro.randomizer.AccelerometerFragment">
