--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".BackgroundSetUpActivity"
+            android:label="@string/app_name">
+        </activity>
         <service android:enabled="true" android:name=".MyService" />
         <receiver android:name=".AlarmReceiver"></receiver>
     </application>
