streaming works in two types, but not possible to stop service, on the other hand setRepeating stops when locked

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.RECORD_VIDEO" />
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -23,14 +25,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BackgroundSetUpActivity"
+            android:name=".streaming.BackgroundSetUpActivity"
             android:label="@string/app_name">
         </activity>
-        <service android:enabled="true" android:name=".MyService" />
-        <receiver android:name=".AlarmReceiver"></receiver>
+        <service android:enabled="true" android:name=".streaming.MyService" />
+        <service android:enabled="true" android:name=".streaming.RepeatingService" />
+        <receiver android:name=".streaming.AlarmReceiver"></receiver>
     </application>
 
-    <receiver android:name="com.ondro.randomizer.AccelerometerFragment">
+    <receiver android:name="com.ondro.randomizer.mainfragments.LiveValuesFragment">
         <intent-filter>
             <action android:name="android.intent.action.ACTION_BATTERY_LOW"/>
             <action android:name="android.intent.action.ACTION_BATTERY_OKAY"/>
