--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ondro.randomizer" >
+    package="com.ondro.randomizer">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_VIDEO" />
@@ -28,9 +28,11 @@
             android:name=".streaming.BackgroundSetUpActivity"
             android:label="@string/app_name">
         </activity>
-        <service android:enabled="true" android:name=".streaming.MyService" />
-        <service android:enabled="true" android:name=".streaming.RepeatingService" />
-        <receiver android:name=".streaming.AlarmReceiver"></receiver>
+        <activity
+            android:name=".mainfragments.CameraActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen">
+        </activity>
     </application>
 
     <receiver android:name="com.ondro.randomizer.mainfragments.LiveValuesFragment">
